--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/GGracieux/lightkeeper.git"
+  },
   "author": "ggracieux@gmail.com",
   "license": "ISC",
   "dependencies": {
