--- a/app/package.json
+++ b/app/package.json
@@ -7,13 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/GGracieux/lightkeeper.git"
+    "type": "git",
+    "url": "https://github.com/GGracieux/lightkeeper.git"
   },
   "author": "ggracieux@gmail.com",
   "license": "ISC",
   "dependencies": {
     "cron": "^1.7.2",
-    "mkdirp": "^0.5.1"
+    "express": "^4.17.1",
+    "mkdirp": "^0.5.1",
+    "serve-index": "^1.9.1",
+    "slugify": "^1.3.5"
   }
 }
