--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "cron": "^1.7.2",
     "express": "^4.17.1",
     "glob": "^7.1.5",
+    "log-rotate": "^0.2.8",
     "mkdirp": "^0.5.1",
     "serve-index": "^1.9.1",
     "slugify": "^1.3.5"
