Removing useless app directory, moving everything up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build: ./
     container_name: lightkeeper
     volumes:
-      - ./app/data:/lightkeeper/data:rw
+      - ./data:/lightkeeper/data:rw
     ports:
       - 80:80
