--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lightkeeper",
-  "version": "1.0.0",
+  "name": "lighthouse-keeper",
+  "version": "1.0.1",
   "description": "Lighthouse job orchestrator",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GGracieux/lightkeeper.git"
+    "url": "https://github.com/GGracieux/lighthouse-keeper.git"
   },
   "author": "ggracieux@gmail.com",
   "license": "ISC",
