--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "argparse": "^1.0.10",
     "cron": "^1.7.2",
+    "deepmerge": "^4.2.2",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "glob": "^7.1.5",
