--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "log-rotate": "^0.2.8",
     "mkdirp": "^0.5.1",
     "rimraf": "^3.0.0",
+    "semaphore": "^1.1.0",
     "serve-index": "^1.9.1",
     "slugify": "^1.3.5"
   }
