--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mkdirp": "^0.5.1",
     "rimraf": "^3.0.0",
     "semaphore": "^1.1.0",
+    "serve-favicon": "^2.5.0",
     "serve-index": "^1.9.1",
     "slugify": "^1.3.5"
   }
